testsuite/tests/typecheck/should_fail/T17594g.stderr

T17594g.hs:4:1: error: Parse error in pattern: comp
